# tailang

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  demo.meng  demo.rs  演示报告.md
cli/: bench_numeric.py  bench_numeric.tai  go.mod  main.go  sample.meng  sample.tai
cli/cmd/: bench.go  build.go  build_run_test.go  doc.go  doc_cmd_test.go  encoding.go  init.go  llm.go  llm_test.go  precompile.go  root.go  run.go  test.go  test_cmd_test.go  validate_tai.go  validate_tai_test.go
compiler/: Cargo.toml
compiler/src/: codegen.rs  compile_config.rs  emitter.rs  hir.rs  lexer.rs  lib.rs  llvm_backend.rs  main.rs  native_ir.rs  parser.rs  precompiler.rs  runtime.rs  tai.rs  tai_ast.rs  tai_exec.rs  tai_lexer.rs  tai_parser.rs  translator.rs  types.rs
docs/: CLI_GUIDE.md
docs/spec/: NATIVE_BACKEND_ARCHITECTURE.md  TAI_LANGUAGE_V3.md  TAI_MIGRATION_NOTES.md  TAI_SCHEMA.md  TAI_SUPPORT_MATRIX.md  tai.schema.json
examples/api/: main.meng
examples/auth/: main.meng
examples/hello/: main.meng
gui/: pubspec.yaml
gui/lib/: main.dart
gui/lib/screens/: workbench_screen.dart
gui/lib/state/: workbench_state.dart
gui/lib/widgets/: log_panel.dart  source_panel.dart  toolbar.dart
precompiler/: Cargo.toml
precompiler/src/: lib.rs
tests/compat/mirror_logic/: main.tai  main_test.meng
tests/runtime/llvm_array/: main.tai  main_test.meng
tests/runtime/llvm_nested_object/: main.tai  main_test.meng
tests/runtime/llvm_object/: main.tai  main_test.meng
tests/runtime/self_native_array/: main.tai  main_test.meng
tests/runtime/self_native_object/: main.tai  (+1 more)
(+4 files in other folders)
