[package]
name = "tailang-compiler"
version = "0.1.0"
edition = "2021"
description = "Tailang Compiler - Compiles .meng files to executable"
authors = ["Tailang Team <team@tailang.org>"]

[dependencies]
tree-sitter = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15"
thiserror = "1.0"

[lib]
name = "tailang_compiler"
path = "src/lib.rs"
